更新章节1.4到章节1.6

--- a/0：序言.md
+++ b/0：序言.md
@@ -22,4 +22,25 @@ WSGL语言：https://www.w3.org/TR/2025/CRD-WGSL-20250926/
 
 ---
 
-​	最后，感谢Bevy社区和互联网上的每一个贡献者和解答者们，没有你们的无私付出Bevy和Rust就无法迎来长足的发展，也就不会有本书。
+### 0.4 参考文献：
+
+Bevy  examples：https://github.com/bevyengine/bevy
+
+Bevy docx：https://docs.rs/bevy/0.17.1/bevy/
+
+Unofficial Bevy Cheat Book：https://bevy-cheatbook.github.io/overview.html
+
+Bevy game development：https://taintedcoders.com/
+
+bevy_pointcloud：https://github.com/rlamarche/bevy_pointcloud/tree/main
+
+wgpu：https://sotrh.github.io/learn-wgpu/#what-is-wgpu
+
+WebGPU：https://webgpufundamentals.org/webgpu/lessons/webgpu-fundamentals.html
+
+
+
+还有互联网上的一切热心的社区贡献者的文章、评论、回答
+
+最后，感谢Bevy社区和互联网上的每一个贡献者和解答者们，没有你们的无私付出Bevy和Rust就无法迎来长足的发展，也就不会有本书。
+
