--- a/0：序言.md
+++ b/0：序言.md
@@ -38,7 +38,7 @@ wgpu：https://sotrh.github.io/learn-wgpu/#what-is-wgpu
 
 WebGPU：https://webgpufundamentals.org/webgpu/lessons/webgpu-fundamentals.html
 
-
+awesome_bevy：https://github.com/nolantait/awesome-bevy
 
 还有互联网上的一切热心的社区贡献者的文章、评论、回答
 
