更新第二章

--- a/0：序言.md
+++ b/0：序言.md
@@ -22,7 +22,7 @@ WSGL语言：https://www.w3.org/TR/2025/CRD-WGSL-20250926/
 
 ---
 
-### 0.4 参考文献：
+### 0.4 参考文献
 
 Bevy  examples：https://github.com/bevyengine/bevy
 
