--- a/5：2D.md
+++ b/5：2D.md
@@ -1,6 +1,6 @@
 ## 5.1 Mesh2d
 
-​	在Bevy中，有 `Mesh2d`与`Mesh3d`两种，前者是三角形、矩形、圆形等各种二维形状，后者代表立方体、网格模型等三维物体。`Mesh2d`与`Mesh3d`可以像一个普通的组件一样使用，就像下面一样。在这些代码里，我们生成了一个实体，并在其之上添加了一个`Mesh2d`与对应的`MeshMaterial2d`。
+​	在Bevy中，有 `Mesh2d`与`Mesh3d`两种，前者是三角形、矩形、圆形等各种二维形状，后者代表立方体、网格模型等三维物体。`Mesh2d`与`Mesh3d`可以像一个普通的组件一样使用，就像下面一样。在这些代码里，我们生成了一个实体，并在其之上添加了一个`Mesh2d`与对应的`MeshMaterial2d`。同时，别忘了我们还需要指定一个`Camera2d`来渲染这些内容。
 
 ```rust
 fn setup(
@@ -16,6 +16,8 @@ fn setup(
         Transform::default().with_scale(Vec3::splat(128.)),
     ));
 }
+
+
 ```
 
 ​	`Mesh`代表由点组成的集合，他们可能是一个模型、一条线段、或者只是一些点，Bevy，而`ColorMaterial`则代表代表这些形状的颜色、材质等。在Bevy中，二者以`Assets`的形式存在，当使用时，我们应当使用`ResMut`获得该资源并向其中添加真正的数据类型。在`Assets`中我们说过，Bevy加载`Assets`时将返回一个对应的句柄并在后台加载这些数据，因此，创建`Mesh2d`与`MeshMaterial2d`组件时，我们传递的也是一个对应的`Handler`。
@@ -69,7 +71,7 @@ use bevy::prelude::*;
 let color = Color::hsl(360. * i as f32 / num_shapes as f32, 0.95, 0.7);
 ```
 
-​	枚举`alpha_mode`用于当我们使用图像做为材质时，对于图像的透明区域该如何处理，其包含三个值`Opaque`，`Mask(f32)`，`Blend`，他们的含义如下。
+​	枚举`alpha_mode`是一个`AlphaMode2d`类型，当我们使用图像做为材质时，该值设置对于图像的透明区域该如何处理。其包含三个值`Opaque`，`Mask(f32)`，`Blend`，他们的含义如下。
 
 - `Opaque`：忽略图像的透明通道，使用底色填充（一般为黑色）
 - `Mask(f32)`：设置一个阈值，类型为f32，当透明度低于这个值时将被渲染为透明，否则被认为完全不透明
@@ -138,6 +140,10 @@ mesh.insert_attribute(Mesh::ATTRIBUTE_COLOR, vertex_colors);
 //现在，我们可以使用这个新的mesh作为Mesh2d
 let mesh_handle = meshes.add(mesh);	
 ```
+
+### 5.2.2 自定义材质
+
+​	与2d相关的内容主要储存在bevy_sprite_render这个crate中，其中包括渲染管道的组成、材质的定义的代码等。我们可以通过实现一个 `Material2d`特型来创建自己的材质。这涉及到了一些底层的wgpu与图形学内容，因此这一节应该属于渲染管线的内容，但是在这里我们将会简要提一下，感兴趣的读者可以查看[文档](https://docs.rs/bevy/0.17.3/bevy/sprite_render/trait.Material2d.html)，或者等到学习自定义着色器时在反过来看这些内容。
 
 ## 5.3 Font
 
@@ -308,7 +314,7 @@ commands.spawn((
 
 ​	下面是bevy示例sprite_scale中，每种缩放模式的效果。
 
-![1](./image/chapter6/1.png)
+![1](./image/chapter5/1.png)
 
 ### 5.5.2 sprite slice
 
@@ -365,7 +371,7 @@ pub struct BorderRect {
 ));
 ```
 
-![2](./image/chapter6/2.png)
+![2](./image/chapter5/2.png)
 
 ### 5.5.3 sprite tile
 
@@ -393,13 +399,13 @@ commands.spawn(Sprite {
 });
 ```
 
-![3](./image/chapter6/3.png)
+![3](./image/chapter5/3.png)
 
 ### 5.5.4 sprite animations
 
 ​	加载完了图像之后，我们还需要给每个角色设定动画，如果只是看到人物单纯的平移那可不是我们想要的。对于2D图像来说，我们最常用的就是下面这种方式，其中每一副图像指定了角色动画的一帧，我们要做的就是不断重复这些图像来产生动画。
 
-![4](./image/chapter6/4.png)
+![4](./image/chapter5/4.png)
 
 ​	要加载这样的精灵，我们需要结合`texture_atlas`参数来指定动画每一帧的读取方式，该参数的定义如下。
 
