更新7.2 7.3节，调整格式，添加5.5节

--- a/5：2D.md
+++ b/5：2D.md
@@ -1,6 +1,6 @@
 ## 5.1 Mesh2d
 
-​	在Bevy中，有 `Mesh2d`与`Mesh3d`两种，前者是三角形、矩形、圆形等各种二维形状，后者代表立方体、网格模型等三维物体。`Mesh2d`与`Mesh3d`可以像一个普通的组件一样使用，就像下面一样。在这些代码里，我们生成了一个实体，并在其之上添加了一个`Mesh2d`与对应的`MeshMaterial2d`。同时，别忘了我们还需要指定一个`Camera2d`来渲染这些内容。
+在Bevy中，有 `Mesh2d`与`Mesh3d`两种，前者是三角形、矩形、圆形等各种二维形状，后者代表立方体、网格模型等三维物体。`Mesh2d`与`Mesh3d`可以像一个普通的组件一样使用，就像下面一样。在这些代码里，我们生成了一个实体，并在其之上添加了一个`Mesh2d`与对应的`MeshMaterial2d`。同时，别忘了我们还需要指定一个`Camera2d`来渲染这些内容。
 
 ```rust
 fn setup(
@@ -20,17 +20,17 @@ fn setup(
 
 ```
 
-​	`Mesh`代表由点组成的集合，他们可能是一个模型、一条线段、或者只是一些点，Bevy，而`ColorMaterial`则代表代表这些形状的颜色、材质等。在Bevy中，二者以`Assets`的形式存在，当使用时，我们应当使用`ResMut`获得该资源并向其中添加真正的数据类型。在`Assets`中我们说过，Bevy加载`Assets`时将返回一个对应的句柄并在后台加载这些数据，因此，创建`Mesh2d`与`MeshMaterial2d`组件时，我们传递的也是一个对应的`Handler`。
+`Mesh`代表由点组成的集合，他们可能是一个模型、一条线段、或者只是一些点，Bevy，而`ColorMaterial`则代表代表这些形状的颜色、材质等。在Bevy中，二者以`Assets`的形式存在，当使用时，我们应当使用`ResMut`获得该资源并向其中添加真正的数据类型。在`Assets`中我们说过，Bevy加载`Assets`时将返回一个对应的句柄并在后台加载这些数据，因此，创建`Mesh2d`与`MeshMaterial2d`组件时，我们传递的也是一个对应的`Handler`。
 
-​	Bevy在bevy_math::primitives中为我们定义好了一组基本的几何形状，这些形状同样在preload中不需要我们再从bevy_math中导入，如上面的`Rectangle`就是其中的一个形状，这里不再一一赘述，读者可以查看[文档](https://doc.qu1x.dev/bevy_trackball/bevy_math/primitives/index.html)详细了解每种形状的创建方式。
+Bevy在bevy_math::primitives中为我们定义好了一组基本的几何形状，这些形状同样在preload中不需要我们再从bevy_math中导入，如上面的`Rectangle`就是其中的一个形状，这里不再一一赘述，读者可以查看[文档](https://doc.qu1x.dev/bevy_trackball/bevy_math/primitives/index.html)详细了解每种形状的创建方式。
 
 ## 5.2 MeshMaterial2d
 
-​	`MeshMaterial2d`描述了Bevy应该如何渲染这些形状的具体信息，如果没有`MeshMaterial2d`只有`Mesh2d`，那么你会发现窗口上不会渲染任何东西。因此，不详细了解`MeshMaterial2d`，那么我们就无法掌握如何渲染这些形状。
+`MeshMaterial2d`描述了Bevy应该如何渲染这些形状的具体信息，如果没有`MeshMaterial2d`只有`Mesh2d`，那么你会发现窗口上不会渲染任何东西。因此，不详细了解`MeshMaterial2d`，那么我们就无法掌握如何渲染这些形状。
 
 ### 5.2.1 ColorMaterial
 
-​	`ColorMaterial`是一种二维的材质，其结构体的内容如下。可见，通过`ColorMaterial`我们能够控制的是一个`mesh2d`的颜色、透明度、uv变换、还有材质，下面我们来详细介绍一些其使用方式。
+`ColorMaterial`是一种二维的材质，其结构体的内容如下。可见，通过`ColorMaterial`我们能够控制的是一个`mesh2d`的颜色、透明度、uv变换、还有材质，下面我们来详细介绍一些其使用方式。
 
 ```rust
 pub struct ColorMaterial {
@@ -43,7 +43,7 @@ pub struct ColorMaterial {
 }
 ```
 
-​	在创建`ColorMaterial`时，我们可以直接向其传入上面的四个参数。
+在创建`ColorMaterial`时，我们可以直接向其传入上面的四个参数。
 
 ```rust
 let mesh_handle = meshes.add(Rectangle::from_size(Vec2::splat(256.0)));
@@ -61,7 +61,7 @@ commands.spawn((
 ));
 ```
 
-​	对于第一个参数`color`而言，Bevy给了我们很多的构造方式，这些方式如下。
+对于第一个参数`color`而言，Bevy给了我们很多的构造方式，这些方式如下。
 
 ```rust
 //bevy里有一组内置的常用颜色，可以直接引入他们
@@ -71,7 +71,7 @@ use bevy::prelude::*;
 let color = Color::hsl(360. * i as f32 / num_shapes as f32, 0.95, 0.7);
 ```
 
-​	枚举`alpha_mode`是一个`AlphaMode2d`类型，当我们使用图像做为材质时，该值设置对于图像的透明区域该如何处理。其包含三个值`Opaque`，`Mask(f32)`，`Blend`，他们的含义如下。
+枚举`alpha_mode`是一个`AlphaMode2d`类型，当我们使用图像做为材质时，该值设置对于图像的透明区域该如何处理。其包含三个值`Opaque`，`Mask(f32)`，`Blend`，他们的含义如下。
 
 - `Opaque`：忽略图像的透明通道，使用底色填充（一般为黑色）
 - `Mask(f32)`：设置一个阈值，类型为f32，当透明度低于这个值时将被渲染为透明，否则被认为完全不透明
@@ -86,11 +86,11 @@ MeshMaterial2d(materials.add(ColorMaterial {
 })),
 ```
 
-​	`uv_transform`要与`texture`一起使用时才能发挥作用，当我们加载了一个图像并传入时，我们可以通过指定`uv_transform`来决定图像应该如何与形状对其，这是一个二维的[仿射变换](https://doc.qu1x.dev/bevy_trackball/bevy/math/struct.Affine2.html)。
+`uv_transform`要与`texture`一起使用时才能发挥作用，当我们加载了一个图像并传入时，我们可以通过指定`uv_transform`来决定图像应该如何与形状对其，这是一个二维的[仿射变换](https://doc.qu1x.dev/bevy_trackball/bevy/math/struct.Affine2.html)。
 
-​	在加载图像时，若图像大小小于`Mesh2d`，那么**默认情况下，图像将会在左上角开始被放大到能填满区域为止**，但是当你**指定了`uv_transform`时**，若还不能覆盖整个区域，那么**边缘将会被拉伸到填满区域为止**；若图像大小大于`Mesh2d`，那么将**只会从图像的左上角开始显示**。或者，我们可以指定将图像进行重复显示，这是通过加载图像时指定`settings`做到的。
+在加载图像时，若图像大小小于`Mesh2d`，那么**默认情况下，图像将会在左上角开始被放大到能填满区域为止**，但是当你**指定了`uv_transform`时**，若还不能覆盖整个区域，那么**边缘将会被拉伸到填满区域为止**；若图像大小大于`Mesh2d`，那么将**只会从图像的左上角开始显示**。或者，我们可以指定将图像进行重复显示，这是通过加载图像时指定`settings`做到的。
 
-​	`ImageSamplerDescriptor`里包含了大量的设置，读者可以查看[文档](https://doc.qu1x.dev/bevy_trackball/bevy/image/struct.ImageSamplerDescriptor.html)详细了解，这里我们只使用其uv参数。
+`ImageSamplerDescriptor`里包含了大量的设置，读者可以查看[文档](https://doc.qu1x.dev/bevy_trackball/bevy/image/struct.ImageSamplerDescriptor.html)详细了解，这里我们只使用其uv参数。
 
 ```rust
 let image_with_repeated_sampler = asset_server.load_with_settings(
@@ -119,9 +119,9 @@ MeshMaterial2d(materials.add(ColorMaterial {
 })),
 ```
 
-​	现在，我们介绍了`ColorMaterial`的四个重要的参数的使用方法，但是我们仍然缺少一种重要的材质渲染方式，这种方式是GPU最基础的也是功能最强大的，那就是利用顶点属性来渲染颜色。
+现在，我们介绍了`ColorMaterial`的四个重要的参数的使用方法，但是我们仍然缺少一种重要的材质渲染方式，这种方式是GPU最基础的也是功能最强大的，那就是利用顶点属性来渲染颜色。
 
-​	 Mesh结构体上有一个特殊的方法，名叫`insert_attribute`，利用这个方法，我们可以对Mesh的顶点处插入一些属性，并指定这些属性的类型，当拥有这些属性时，wgpu将会自动工作来将其显示在屏幕上。同样，我们也可以移除这些属性，关于其他更多的方法可以查看相关的[文档](https://doc.qu1x.dev/bevy_trackball/bevy/prelude/struct.Mesh.html#method.insert_attribute)。
+ Mesh结构体上有一个特殊的方法，名叫`insert_attribute`，利用这个方法，我们可以对Mesh的顶点处插入一些属性，并指定这些属性的类型，当拥有这些属性时，wgpu将会自动工作来将其显示在屏幕上。同样，我们也可以移除这些属性，关于其他更多的方法可以查看相关的[文档](https://doc.qu1x.dev/bevy_trackball/bevy/prelude/struct.Mesh.html#method.insert_attribute)。
 
 ```rust
 let mut mesh = Mesh::from(Rectangle::default());
@@ -143,13 +143,13 @@ let mesh_handle = meshes.add(mesh);
 
 ### 5.2.2 自定义材质
 
-​	与2d相关的内容主要储存在bevy_sprite_render这个crate中，其中包括渲染管道的组成、材质的定义的代码等。我们可以通过实现一个 `Material2d`特型来创建自己的材质。这涉及到了一些底层的wgpu与图形学内容，因此这一节应该属于渲染管线的内容，但是在这里我们将会简要提一下，感兴趣的读者可以查看[文档](https://docs.rs/bevy/0.17.3/bevy/sprite_render/trait.Material2d.html)，或者等到学习自定义着色器时在反过来看这些内容。
+与2d相关的内容主要储存在bevy_sprite_render这个crate中，其中包括渲染管道的组成、材质的定义的代码等。我们可以通过实现一个 `Material2d`特型来创建自己的材质。这涉及到了一些底层的wgpu与图形学内容，因此这一节应该属于渲染管线的内容，但是在这里我们将会简要提一下，感兴趣的读者可以查看[文档](https://docs.rs/bevy/0.17.3/bevy/sprite_render/trait.Material2d.html)，或者等到学习自定义着色器时在反过来看这些内容。
 
 ## 5.3 Font
 
-​	字体是2D显示的另一个方面，在Bevy中，我们可以加载自己的字体并显示。
+字体是2D显示的另一个方面，在Bevy中，我们可以加载自己的字体并显示。
 
-​	字体是后戳为ttf的一些文件，包含了文字应该如何在屏幕上绘制的信息，要加载这些字体，就如同加载普通的`Aeest`一样。
+字体是后戳为ttf的一些文件，包含了文字应该如何在屏幕上绘制的信息，要加载这些字体，就如同加载普通的`Aeest`一样。
 
 ```rust
 let font = asset_server.load("fonts/FiraSans-Bold.ttf");
@@ -170,11 +170,11 @@ commands.spawn((
 ));
 ```
 
-​	在这其中涉及到了大量的字体相关的组件，例如`TextLayout`，`TextBackgroundColor`，`Text2dShadow`，他们的作用不言而喻，通过修改这些组件便可以影响字体的显示效果，读者可以查阅文档来获得详细的信息，这里不再赘述。
+在这其中涉及到了大量的字体相关的组件，例如`TextLayout`，`TextBackgroundColor`，`Text2dShadow`，他们的作用不言而喻，通过修改这些组件便可以影响字体的显示效果，读者可以查阅文档来获得详细的信息，这里不再赘述。
 
 ## 5.4 Image
 
-​	在前面，我们只是简单的使用了一下 `asset_server`来加载图像，但是我们还没有详细的介绍图像，在介绍Sprite相关的知识之前，有必要在介绍一下与图像相关的加载方式。在之前，我们知道了如何使用`asset_server`来加载图像，然后利用返回的handle，我们可以进行查询。
+在前面，我们只是简单的使用了一下 `asset_server`来加载图像，但是我们还没有详细的介绍图像，在介绍Sprite相关的知识之前，有必要在介绍一下与图像相关的加载方式。在之前，我们知道了如何使用`asset_server`来加载图像，然后利用返回的handle，我们可以进行查询。
 
 ```rust
 fn read_image_data(images: ResMut<Assets<Image>>, share_image: Res<ShareImage>) {
@@ -188,7 +188,7 @@ fn read_image_data(images: ResMut<Assets<Image>>, share_image: Res<ShareImage>) 
 }
 ```
 
-​	以下是`Image`结构体的字段，顾名思义，我们可以通过data来访问原始的图像数据，另外我们还有一些配置项能够修改图像的渲染行为。这些参数的具体含义，读者可以查看[文档](https://docs.rs/bevy/0.17.3/bevy/image/struct.Image.html)。这里不再赘述。
+以下是`Image`结构体的字段，顾名思义，我们可以通过data来访问原始的图像数据，另外我们还有一些配置项能够修改图像的渲染行为。这些参数的具体含义，读者可以查看[文档](https://docs.rs/bevy/0.17.3/bevy/image/struct.Image.html)。这里不再赘述。
 
 ```rust
 pub struct Image {
@@ -202,13 +202,13 @@ pub struct Image {
 }
 ```
 
-​	在这里，我们需要重点关注其`sampler`字段，其表示了当图像被缩放时应该怎么被渲染，默认情况下Bevy将会采取线性插值的方式渲染，这可能会导致我们的图像经过放大之后出现模糊。这时，我们可以更改其为最临近插值，即可解决这个问题。
+在这里，我们需要重点关注其`sampler`字段，其表示了当图像被缩放时应该怎么被渲染，默认情况下Bevy将会采取线性插值的方式渲染，这可能会导致我们的图像经过放大之后出现模糊。这时，我们可以更改其为最临近插值，即可解决这个问题。
 
 ```rust
 image.sampler = ImageSampler::nearest();
 ```
 
-​	更进一步，不知道读者是否还记得，每一种资产加载时，我们可以传递一个setting选项，Bevy为我们提供了`ImageLoaderSettings`选项，其中就可以直接指定我们的采样方式。
+更进一步，不知道读者是否还记得，每一种资产加载时，我们可以传递一个setting选项，Bevy为我们提供了`ImageLoaderSettings`选项，其中就可以直接指定我们的采样方式。
 
 ```rust
 //加载图像时的一些可选配置
@@ -230,7 +230,7 @@ let image = asset_server.load_with_settings(
 
 ## 5.5 Sprite
 
-​	`Sprite`通常翻译为“精灵”，但其实只是另一种形式的图像，通常用于2D游戏的贴图。由于`Sprite`只是一种图像，因此最简单的方式就是直接加载一个图像然后生成，这可以通过以下方式来做到，通过这种方式，生成的贴图将会保持图像的原始尺寸，默认情况下，其中心将位于坐标(0,0)处。
+`Sprite`通常翻译为“精灵”，但其实只是另一种形式的图像，通常用于2D游戏的贴图。由于`Sprite`只是一种图像，因此最简单的方式就是直接加载一个图像然后生成，这可以通过以下方式来做到，通过这种方式，生成的贴图将会保持图像的原始尺寸，默认情况下，其中心将位于坐标(0,0)处。
 
 ```rust
 //Sprite包含了非常多的参数，这些参数我们将在后面一一介绍
@@ -265,7 +265,7 @@ let sprite = Sprite::from_image(image_handle);
 commands.spawn(sprite);
 ```
 
-​	让我们先来介绍最重要的`image_mode`，很多时候我们并不是只想将图像加载，而是以重复的方式或者切片、缩放之后加载，这种方式可以节省我们的内存，通过只保存一份最小纹理，然后在加载时进行处理，我们就可以节省空间。为了做到这件事，我们需要使用`image_mode`参数，该参数是一个名为`SpriteImageMode` 的枚举类型，其包含以下四个值。
+让我们先来介绍最重要的`image_mode`，很多时候我们并不是只想将图像加载，而是以重复的方式或者切片、缩放之后加载，这种方式可以节省我们的内存，通过只保存一份最小纹理，然后在加载时进行处理，我们就可以节省空间。为了做到这件事，我们需要使用`image_mode`参数，该参数是一个名为`SpriteImageMode` 的枚举类型，其包含以下四个值。
 
 ```rust
 pub enum SpriteImageMode {
@@ -286,7 +286,7 @@ pub enum SpriteImageMode {
 
 ### 5.5.1 sprite scale
 
-​	要在加载时对图像进行缩放，我们可以在加载时将其指定为`SpriteImageMode::Scale`，其类型如下。其中包含了六个类型，这些值都不会改变图像的宽高比，前三个会尽可能放大图像导致图像只有一部分被渲染，后三个保证图像都会被渲染。
+要在加载时对图像进行缩放，我们可以在加载时将其指定为`SpriteImageMode::Scale`，其类型如下。其中包含了六个类型，这些值都不会改变图像的宽高比，前三个会尽可能放大图像导致图像只有一部分被渲染，后三个保证图像都会被渲染。
 
 ```rust
 pub enum ScalingMode {
@@ -299,7 +299,7 @@ pub enum ScalingMode {
 }
 ```
 
-​	要使用这些值时，还必须指定`Sprite`的`custom_size`字段，因此我们现在可以这样去设定每个精灵的大小了。
+要使用这些值时，还必须指定`Sprite`的`custom_size`字段，因此我们现在可以这样去设定每个精灵的大小了。
 
 ```rust
 commands.spawn((
@@ -318,7 +318,7 @@ commands.spawn((
 
 ### 5.5.2 sprite slice
 
-​	要在加载时对图像进行切片，我们可以在加载时将其指定为`SpriteImageMode::Sliced`，其中的`TextureSlicer`类型如下。sliced是一种九宫格切片技术，关于该技术的详细介绍读者可以查看[百科](https://en.wikipedia.org/wiki/9-slice_scaling)。简而言之，这是一直特殊的缩放技术，能够在缩放时尽可能合理保持图像的纹理。
+要在加载时对图像进行切片，我们可以在加载时将其指定为`SpriteImageMode::Sliced`，其中的`TextureSlicer`类型如下。sliced是一种九宫格切片技术，关于该技术的详细介绍读者可以查看[百科](https://en.wikipedia.org/wiki/9-slice_scaling)。简而言之，这是一直特殊的缩放技术，能够在缩放时尽可能合理保持图像的纹理。
 
 ```rust
 pub struct TextureSlicer {
@@ -353,7 +353,7 @@ pub struct BorderRect {
 }
 ```
 
-​	同样，我们在使用这种缩放模式的时候，也必须指定尺寸的大小。然后，就可以这样创建不同大小的切片。下图中的效果来自bevy的sprite_slice示例。
+同样，我们在使用这种缩放模式的时候，也必须指定尺寸的大小。然后，就可以这样创建不同大小的切片。下图中的效果来自bevy的sprite_slice示例。
 
 ```rust
  commands.spawn((
@@ -375,7 +375,7 @@ pub struct BorderRect {
 
 ### 5.5.3 sprite tile
 
-​	要在加载时对图像进行重复，例如我们可以利用小块纹理进行重复来得到整块区域的北京，我们可以在加载时将其指定为`SpriteImageMode::Tiled`，相比前两种，这种方式使用起来则轻松得多。
+要在加载时对图像进行重复，例如我们可以利用小块纹理进行重复来得到整块区域的北京，我们可以在加载时将其指定为`SpriteImageMode::Tiled`，相比前两种，这种方式使用起来则轻松得多。
 
 ```rust
 Tiled {
@@ -385,7 +385,7 @@ Tiled {
 },
 ```
 
-​	我们有三个参数，分别指定了在两个方向上是否要进行重复，最后一个参数和slice中的一样，指定重复时的比例。例如，我们可以这样设定。
+我们有三个参数，分别指定了在两个方向上是否要进行重复，最后一个参数和slice中的一样，指定重复时的比例。例如，我们可以这样设定。
 
 ```rust
 commands.spawn(Sprite {
@@ -403,11 +403,11 @@ commands.spawn(Sprite {
 
 ### 5.5.4 sprite animations
 
-​	加载完了图像之后，我们还需要给每个角色设定动画，如果只是看到人物单纯的平移那可不是我们想要的。对于2D图像来说，我们最常用的就是下面这种方式，其中每一副图像指定了角色动画的一帧，我们要做的就是不断重复这些图像来产生动画。
+加载完了图像之后，我们还需要给每个角色设定动画，如果只是看到人物单纯的平移那可不是我们想要的。对于2D图像来说，我们最常用的就是下面这种方式，其中每一副图像指定了角色动画的一帧，我们要做的就是不断重复这些图像来产生动画。
 
 ![4](./image/chapter5/4.png)
 
-​	要加载这样的精灵，我们需要结合`texture_atlas`参数来指定动画每一帧的读取方式，该参数的定义如下。
+要加载这样的精灵，我们需要结合`texture_atlas`参数来指定动画每一帧的读取方式，该参数的定义如下。
 
 ```rust
 pub struct TextureAtlas {
@@ -425,7 +425,7 @@ pub struct TextureAtlasLayout {
 }	
 ```
 
-​	由于`TextureAtlasLayout`是一种Assets，因此我们还需要将其添加到bevy内置的资产中。
+由于`TextureAtlasLayout`是一种Assets，因此我们还需要将其添加到bevy内置的资产中。
 
 ```rust
 //这个组件包含一个计时器，用于控制我们的动画播放速度
@@ -471,7 +471,7 @@ fn setup(
 }
 ```
 
-​	现在，我们便可以在一个系统中通过更改组件的`texture_atlas`上的`index`，就可以实现帧之间的切换。不过在这里，我们得关心一下帧切换的速度，由于bevy的渲染系统非常快，所以我们必须控制一下切换的速度符合实际，这就要利用我们之前添加的`AnimationTimer`，其中定义了一个`Timer`。
+现在，我们便可以在一个系统中通过更改组件的`texture_atlas`上的`index`，就可以实现帧之间的切换。不过在这里，我们得关心一下帧切换的速度，由于bevy的渲染系统非常快，所以我们必须控制一下切换的速度符合实际，这就要利用我们之前添加的`AnimationTimer`，其中定义了一个`Timer`。
 
 ```rust
 fn animate_sprite(
@@ -496,9 +496,9 @@ fn animate_sprite(
 
 ### 5.5.5 批量加载sprite
 
-​	想象一下，在一个游戏里我们有巨量的图像都需要加载，在这种情况下这件事很快就会变得很棘手，由于精灵的不同动作的动画可能不在一幅图像里，因此我们必须手动的将这些多副图像组合为一幅。幸运的是，Bevy为我们提供了一种更好的方式来加载这些图像。
+想象一下，在一个游戏里我们有巨量的图像都需要加载，在这种情况下这件事很快就会变得很棘手，由于精灵的不同动作的动画可能不在一幅图像里，因此我们必须手动的将这些多副图像组合为一幅。幸运的是，Bevy为我们提供了一种更好的方式来加载这些图像。
 
-​	首先，我们不再使用`asset_server`来加载单幅图像，而是使用其`load_folder`方法来递归地加载整个文件夹下的所有可加载文件，并判断其是否是图像。
+首先，我们不再使用`asset_server`来加载单幅图像，而是使用其`load_folder`方法来递归地加载整个文件夹下的所有可加载文件，并判断其是否是图像。
 
 ```rust
 //用于保存句柄的全局资源
@@ -512,7 +512,7 @@ fn load_textures(mut commands: Commands, asset_server: Res<AssetServer>) {
 
 ```
 
-​	然后，我们还需要某种方式，来观察加载是否已经完成然后调用我们的某个系统来处理，这可以通过系统的state来实现（还记得吗？）
+然后，我们还需要某种方式，来观察加载是否已经完成然后调用我们的某个系统来处理，这可以通过系统的state来实现（还记得吗？）
 
 ```rust
 //首先定义我们的state，并指定默认的状态
@@ -553,7 +553,7 @@ fn check_textures(
 
 ```
 
-​	一旦这些步骤完成，我们就可以使用这些资源来加载我们的`sprite`。
+一旦这些步骤完成，我们就可以使用这些资源来加载我们的`sprite`。
 
 ```rust
 
@@ -578,7 +578,7 @@ fn setup(
 
 ```
 
-​	如何合并多副图像为一个并从中创建单个的`TextureAtlas`呢？这可以通过`TextureAtlasBuilder`来实现，`TextureAtlasBuilder`能够自动将多副图像合并为一副，并返回三个参数：`texture_atlas_layout`, `texture_atlas_sources`, `texture`，他们的类型分别是`TextureAtlas`，`TextureAtlasSources`，`Handle<Image>`。
+如何合并多副图像为一个并从中创建单个的`TextureAtlas`呢？这可以通过`TextureAtlasBuilder`来实现，`TextureAtlasBuilder`能够自动将多副图像合并为一副，并返回三个参数：`texture_atlas_layout`, `texture_atlas_sources`, `texture`，他们的类型分别是`TextureAtlas`，`TextureAtlasSources`，`Handle<Image>`。
 
 ```rust
 
@@ -618,7 +618,7 @@ fn create_texture_atlas(
 }
 ```
 
-​	根据前面的介绍，`texture_atlas_layout`中记录了合并后整副图像的大小和每一副子图像的矩形范围。但是我们还缺少一个关键信息，我们只知道这幅子图的范围，而不知道这部分子图到底是那副图像。这些信息，就记录在了`TextureAtlasSources`类型的`texture_atlas_sources`中，其定义如下，只是一个简单的`HashMap`而已。如果我们需要使用这些信息的话，便可以通过这两个返回值来获得正确的对应关系。
+根据前面的介绍，`texture_atlas_layout`中记录了合并后整副图像的大小和每一副子图像的矩形范围。但是我们还缺少一个关键信息，我们只知道这幅子图的范围，而不知道这部分子图到底是那副图像。这些信息，就记录在了`TextureAtlasSources`类型的`texture_atlas_sources`中，其定义如下，只是一个简单的`HashMap`而已。如果我们需要使用这些信息的话，便可以通过这两个返回值来获得正确的对应关系。
 
 ```rust
 pub struct TextureAtlasSources {
